--- a/calendar-extension/popup/popup.html
+++ b/calendar-extension/popup/popup.html
@@ -1,64 +1,79 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Create Calendar Entry</title>
-  <link rel="stylesheet" href="popup.css">
+  <link rel="stylesheet" href="popup.css" />
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Neues Event</h1>
-      <a href="#" id="view-all-link" class="view-all-link">📅 Alle Events ansehen</a>
+
+       <button id="logout-btn" class="logout-btn hidden" title="Abmelden">
+        Abmelden
+      </button>
     </header>
 
-    <!-- Loading State -->
-    <div id="loading" class="state-view">
+    <!-- STATUS MELDUNG -->
+    <p id="status-text" style="font-size:12px; color:#666; margin-bottom:12px;">
+      Initialisiere…
+    </p>
+
+    <!-- LOGIN STATE -->
+    <div id="login" class="state-view hidden">
+      <button id="login-btn" class="primary-btn">
+        Mit Google verbinden
+      </button>
+    </div>
+
+    <!-- LOADING STATE -->
+    <div id="loading" class="state-view hidden">
       <div class="spinner"></div>
-      <p>Analysiere Auswahl...</p>
+      <p>Bitte warten…</p>
     </div>
 
-    <!-- Error State -->
+    <!-- ERROR STATE -->
     <div id="error" class="state-view hidden">
-      <p id="error-message">Fehler beim Laden.</p>
-      <a href="#" id="view-all-error" class="view-all-link-error">📅 Alle Events ansehen</a>
+      <p id="error-message">Ein Fehler ist aufgetreten.</p>
     </div>
 
-    <!-- Form State -->
+    <!-- FORM STATE -->
     <div id="content" class="state-view hidden">
       <div class="form-group">
         <label for="title">Titel</label>
-        <input type="text" id="title" placeholder="Event Titel">
+        <input type="text" id="title" />
       </div>
 
       <div class="row">
         <div class="form-group">
           <label for="date">Datum</label>
-          <input type="date" id="date">
+          <input type="date" id="date" />
         </div>
         <div class="form-group">
           <label for="time">Zeit</label>
-          <input type="time" id="time">
+          <input type="time" id="time" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="description">Beschreibung</label>
-        <textarea id="description" rows="3" placeholder="Beschreibung"></textarea>
+        <textarea id="description" rows="3"></textarea>
       </div>
 
-      <button id="add-btn" class="primary-btn">Zum Kalender hinzufügen</button>
+      <button id="add-btn" class="primary-btn">
+        Zum Kalender hinzufügen
+      </button>
     </div>
 
-    <!-- Success State -->
+    <!-- SUCCESS STATE -->
     <div id="success" class="state-view hidden">
       <div class="icon-success">✓</div>
       <p>Event hinzugefügt!</p>
-      <a href="#" id="view-all-success" class="view-all-link-success">Alle Events ansehen</a>
     </div>
   </div>
-  <script src="../utils/config.js"></script>
+
   <script src="popup.js"></script>
 </body>
 </html>
